--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cube-app",
+  "homepage": "https://jacobhsu.github.io/cube-app/",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "jacobhsu <jacob.hsu.tw@gmail.com>",
@@ -8,7 +9,8 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "yarn build && gh-pages -d dist"
   },
   "transformModules": {
     "cube-ui": {
@@ -44,6 +46,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
